#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

import("//base/notification/ces_standard/event.gni")
import("//build/test.gni")

module_output_path = "ces_standard/systemtest"

ohos_systemtest("CESPublishOrderedEventSystmTest") {
  module_out_path = module_output_path

  sources = [ "common_event_services_publish_ordered_system_test.cpp" ]

  configs = [ "//base/notification/ces_standard/test/systemtest/common/ces:cesfwk_kits_test_config" ]

  include_dirs = [
    "//utils/native/base/include",
    "//base/notification/ces_standard/cesfwk/innerkits/include",
    "//base/notification/ces_standard/cesfwk/services/include",
    "//base/notification/ces_standard/cesfwk/kits/native/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//base/notification/ces_standard/common/log/include",
    "//foundation/aafwk/standard/services/abilitymgr/include/",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${event_common_path}:libevent_common",
    "//base/notification/ces_standard/cesfwk/innerkits:cesfwk_innerkits",
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//base/notification/ces_standard/cesfwk/services:cesfwk_services",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/libs/libeventhandler:libeventhandler_target",
    "//foundation/appexecfwk/standard/services/bundlemgr:libbms",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  defines = [
    "APP_LOG_TAG = \"CesFwkKitsTest\"",
    "LOG_DOMAIN = 0xD002200",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

group("systemtest_cesOrdered") {
  testonly = true

  deps = [ ":CESPublishOrderedEventSystmTest" ]
}
