# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBDEMOSYSTEM_DIR = "//base/notification/ces_standard/test/systemtest/common/resource/cesSTPermissionOrAB"
group("cesSTPermissionOrAB") {
  deps = [ ":libraryCesSTPermissionOrAB" ]
}
config("cesSTPermissionOrABConfig") {
  visibility = [ ":*" ]
  include_dirs = [
    "${SUBDEMOSYSTEM_DIR}/include",
    "//foundation/appexecfwk/standard/kits/appkit/native/app",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/appexecfwk/standard/services/bundlemgr/include",
    "//foundation/aafwk/standard/services/abilitymgr/include",
    "//foundation/appexecfwk/standard/common/log/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
  ]
  defines = [
    "APP_LOG_TAG = \"cesSTPermissionOrAB\"",
    "LOG_DOMAIN = 0xD002200",
  ]
}
ohos_shared_library("libraryCesSTPermissionOrAB") {
  sources = [ "${SUBDEMOSYSTEM_DIR}/src/ces_st_permission_or_AB.cpp" ]
  configs = [ ":cesSTPermissionOrABConfig" ]
  deps = [
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/appexecfwk/standard/services/bundlemgr:libbms",
    "//utils/native/base:utilsbase",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "notification"
  part_name = "ces_standard"
}
